Edited CSS to fix overflow of Customer and Credits

--- a/src/app/customer/credits/credits.component.scss
+++ b/src/app/customer/credits/credits.component.scss
@@ -1,13 +1,17 @@
 .main {
-    padding: 1em 2em;
+    width: 18rem;
+
+    @media only screen and (min-width: 600px) {
+        padding: 1em 2em;
+    }
 }
 
-h3 {
-    text-align: center;
-}
+// h3 {
+//     text-align: center;
+// }
 
 .credit-input {
-    margin-right: 100%;
+    // margin-right: 100%;
     height: 6rem;
 }
 
